--- a/static/index.css
+++ b/static/index.css
@@ -91,11 +91,9 @@ body {
 	color: #eee;
 }
 
-.break {
-	margin-top: 10px;
-	margin-bottom: 10px;
+.txt {
+	min-width: 350px;
 }
-
 .etxt {
 	min-width: 300px;
 }
@@ -113,6 +111,6 @@ body {
 	}
 	.content {
 		font-size: 17px;
-		padding: 10px;
+		padding: 15px;
 	}
 }
